[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
pre-commit = [
    "pre-commit>=3.7.0",
]
lint = [
    "ruff>=0.3.7",
]
[project]
name = "NewsAnalyser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kharitonov Matvey", email = "maestr0o.mario@yandex.ru"},
]
dependencies = [
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache-2.0"}
